--- a/packages/front/public/index.html
+++ b/packages/front/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Router Example</title>
-    <link href="../src/dist/output.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>INICIO</title>
+  <link rel="icon" href="icono.ico">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
